  
syntax = "proto3";

option csharp_namespace = "Payment.Api";

package payments;


service Payments {
  rpc Process (PaymentViewModelRequest) returns (PaymentViewModelReply);
}


message Card {
  string cardNumber = 1;
  string expirationDate = 2;
  string cvv = 3;
}



message PaymentViewModelRequest {
  Card card = 1;
  string amount = 2;
  string currency = 3;
  string beneficiaryAlias = 4;
}


message PaymentViewModelReply {
  string message = 1;
}